# ai-uml-builder

./: .gitignore  .mailmap  App.tsx  CONTRIBUTING.md  FIX_RELEASE.md  LICENSE  QUICK_RELEASE.txt  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.0.10.md  RELEASE_NOTES_v0.0.5.md  RELEASE_NOTES_v0.0.6.md  RELEASE_NOTES_v0.0.7.md  RELEASE_NOTES_v0.0.8.md  RELEASE_NOTES_v0.0.9.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.10.md  RELEASE_NOTES_v0.1.11.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.1.3.md  RELEASE_NOTES_v0.1.4.md  RELEASE_NOTES_v0.1.5.md  RELEASE_NOTES_v0.1.6.md  RELEASE_NOTES_v0.1.7.md  RELEASE_NOTES_v0.1.9.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.1.md  RELEASE_NOTES_v0.3.2.md  RELEASE_NOTES_v0.3.4.md  SECURITY.md  WARP.md  i18n.ts  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  (+4 more)
.github/: pull_request_template.md
components/: ConfirmationModal.tsx  DiagramViewer.tsx  Editor.tsx  Icons.tsx  LoadingSpinner.tsx  MermaidRenderer.tsx
electron/: main.ts
hooks/: useAuth.tsx  useChats.ts  useDebouncedCallback.ts  useDebouncedValue.ts  useDiagramExport.ts  useLocalStorageState.ts  useUpdater.ts
scripts/: generate-latest.mjs  prepare-release.sh
server/: .env.example  package.json  schema.sql
services/: aisetService.ts  apiClient.ts  diagramPromptLibrary.ts  geminiService.ts  supabaseClient.ts
src-tauri/: Cargo.toml  FIX_DAMAGED_APP.txt  tauri.conf.json
src-tauri/capabilities/: updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+18 files in other folders)
